--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,13 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
+    "plotly.js-dist-min": "^3.0.1",
     "react": "^18.2.0",
     "react-calendar": "^5.1.0",
     "react-chatbot-kit": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "styled-components": "4.4.1",
