--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.2",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "react": "^18.2.0",
     "react-calendar": "^5.1.0",
