--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-calendar": "^5.1.0",
     "react-chatbot-kit": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.26.2",
